chapt5/chapt5_ws/log/build_2026-06-09_20-57-35/demo_python_tf/stderr.log
  File "/home/hzh/ros2_learn/chapt5/chapt5_ws/install/demo_python_tf/lib/python3.10/site-packages/demo_python_tf/tf_listener.py", line 3
    from rclpy.time 
                    ^
SyntaxError: invalid syntax

